@@ -1,0 +1,15 @@
+/* 0pass.c
+ */
+
+#include <testfwk.h>
+
+#ifdef __SDCC
+#pragma std_c99
+#endif
+
+void
+testPass(void)
+{
+  ASSERT (1);
+}
+
